--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -95,13 +95,13 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="@dimen/_20ssp"
+                android:layout_height="@dimen/_20ssp"
                 android:src="@drawable/profile_img"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/active_bg" />
+                app:tint="@color/primary__color" />
 
             <TextView
                 style="@style/text__color"
@@ -122,7 +122,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/active_bg" />
+                app:tint="@color/primary__color" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -133,13 +133,13 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="@dimen/_20ssp"
+                android:layout_height="@dimen/_20ssp"
                 android:src="@drawable/stats"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/active_bg" />
+                app:tint="@color/primary__color" />
 
             <TextView
                 style="@style/text__color"
@@ -160,7 +160,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/active_bg" />
+                app:tint="@color/primary__color" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
