--- a/app/src/main/res/layout/item_container_recent_conversion.xml
+++ b/app/src/main/res/layout/item_container_recent_conversion.xml
@@ -7,8 +7,8 @@
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageProfile"
-        android:layout_width="@dimen/_37sdp"
-        android:layout_height="@dimen/_37sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:background="@drawable/background_image"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         style="@style/text__color"
-        android:textSize="16sp"
+        android:textSize="@dimen/_12ssp"
         android:fontFamily="@font/nunito_bold"
         app:layout_constraintBottom_toTopOf="@id/viewSuporter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         style="@style/text__color"
-        android:textSize="14sp"
+        android:textSize="@dimen/_10ssp"
         android:fontFamily="@font/nunito_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
