--- a/app/src/main/res/layout/item_container_user.xml
+++ b/app/src/main/res/layout/item_container_user.xml
@@ -31,7 +31,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         style="@style/text__color"
-        android:textSize="13sp"
+        android:textSize="@dimen/_11ssp"
         android:fontFamily="@font/nunito_regular"
         app:layout_constraintBottom_toTopOf="@id/viewSuporter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         style="@style/text__color"
-        android:textSize="10sp"
+        android:textSize="@dimen/_8ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
         app:layout_constraintTop_toBottomOf="@id/viewSuporter"/>
