--- a/app/src/main/res/layout/activity_add_group_chat.xml
+++ b/app/src/main/res/layout/activity_add_group_chat.xml
@@ -45,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_36sdp"
             android:layout_marginHorizontal="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_3ssp"
             android:clipToPadding="false"
             android:fontFamily="@font/nunito_regular"
             android:hint="Member Nickname"
@@ -63,6 +64,7 @@
             android:layout_width="@dimen/_28sdp"
             android:layout_height="@dimen/_28sdp"
             android:backgroundTint="@color/primary__color"
+            android:layout_marginRight="@dimen/_2ssp"
             android:clipToOutline="true"
             android:contentDescription="a"
             android:elevation="10dp"
