--- a/app/src/main/res/drawable/custom_password_toggle.xml
+++ b/app/src/main/res/drawable/custom_password_toggle.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_password_visibility_off" android:state_checked="false"/>
+    <item android:drawable="@drawable/eye_off" android:state_checked="false"/>
     <item android:drawable="@drawable/ic_password_visibility" android:state_checked="true"/>
 </selector>
