--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_36sdp"
         android:layout_marginHorizontal="@dimen/_12ssp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="@dimen/_20ssp"
         android:clipToPadding="false"
         android:drawableEnd="@drawable/baseline_search_24"
         android:drawableTint="@color/white"
