--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,9 @@
     <style name="active_bg"><item name="android:background">@color/active_bg</item></style>
     <style name="page_bg"><item name="android:background">#0f1112</item></style>
     <style name="text__color"><item name="android:textColor">@color/white</item></style>
-    <style name="input__bg"><item name="android:background">@drawable/edit__input</item></style>
+    <style name="input__bg">
+        <item name="android:background">@drawable/edit__input</item>
+    </style>
     <style name="chat__header"><item name="android:background">@drawable/chat_header</item></style>
     <style name="chat_message"><item name="android:textColor">@color/white</item></style>
     <style name="fab_bg"><item name="android:backgroundTint">@color/white</item></style>
