--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -195,10 +195,11 @@
     <View
         android:id="@+id/viewImage"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:background="@color/grey_third"
         android:visibility="gone"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/_10ssp"
+        android:layout_marginBottom="-15dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout3" />
 
     <ProgressBar
@@ -214,7 +215,7 @@
         android:id="@+id/image"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="30dp"
         android:scaleType="centerCrop"
         android:src="@drawable/image2"
         android:visibility="gone"
