--- a/app/src/main/res/layout/item_container_post.xml
+++ b/app/src/main/res/layout/item_container_post.xml
@@ -90,6 +90,16 @@
                     android:layout_marginLeft="5dp"
                     android:src="@drawable/messagechat"
                     app:tint="@color/white" />
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+                <ImageView
+                    android:id="@+id/savePost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/save_off"
+                    android:layout_gravity="right"/>
             </LinearLayout>
             <TextView
                 android:id="@+id/content"
