--- a/app/src/main/res/layout/fragment_comment_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_comment_list_dialog_list_dialog.xml
@@ -114,7 +114,7 @@
                 android:paddingEnd="@dimen/_35sdp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_11ssp" />
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
