--- a/app/src/main/res/layout/item_container_post.xml
+++ b/app/src/main/res/layout/item_container_post.xml
@@ -71,8 +71,8 @@
                     app:icon_type="heart"
                     app:icon_size="@dimen/_8ssp"
                     android:id="@+id/likeButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp" />
                 <TextView
                     android:id="@+id/likeCount"
                     android:layout_width="wrap_content"
@@ -96,8 +96,8 @@
                     android:layout_weight="1" />
                 <ImageView
                     android:id="@+id/savePost"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
                     android:src="@drawable/save_off"
                     android:layout_gravity="right"/>
             </LinearLayout>
