--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,10 +58,10 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/nunito_regular"
             android:paddingHorizontal="@dimen/_18sdp"
-            android:text="Welcome to Twaddle, your vibrant social haven for meaningful connections and engaging conversations! Dive into a world where tweets turn into meaningful dialogues, and connections flourish with every post. Twaddle is not just a platform; it's a community where your voice matters. Join us in shaping the social narrative, one tweet at a time.\n Let's twaddle together! "
+            android:text="Welcome to Twaddle! Your vibrant social haven for meaningful connections. Join us in shaping the social narrative, one tweet at a time. Let's twaddle together and make every interaction count!"
             android:textAlignment="center"
             style="@style/text__color"
-            android:textSize="@dimen/_11ssp"
+            android:textSize="@dimen/_12sdp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
